<resources>
    <string name="action_settings">Settings</string>
    <string name="action_dialpad">Dialpad</string>
    <string name="action_add">New conversation</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_end_conversation">Archive this conversation</string>
    <string name="action_contact_details">Contact details</string>
    <string name="action_secure">Secure conversation</string>
    <string name="action_add_new_account">Add new account</string>
    <string name="action_add_phone_book">Add to address book</string>
    <string name="action_delete_contact">Delete from contact list</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="conference_details">Room details</string>
    <string name="conference_technical_problems">You left this room due to technical reasons</string>
    <string name="contact_details">Contact details</string>
    <string name="title_activity_sharewith">Share with conversation</string>
    <string name="title_activity_start_conversation">Start conversation</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <plurals name="x_unread_conversations">
      <item quantity="one">%d unread conversation</item>
        <item quantity="other">%d unread conversations</item>

    </plurals>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contact list? The conversation associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The conversation associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="invite_contact">Invite Contact</string>
    <string name="contacts">Contacts</string>
    <string name="transports">Transports</string>
    <string name="group_conferences">Conferences</string>
    <string name="group_private_messages">Private messages</string>
    <string name="show_muc_status_messages">Show status messages in conferences</string>
    <string name="show_muc_status_messages_summary">Show messages about role and affiliation changes in the chat view</string>
    <string name="muc_role_changed">Role changed to %1$s</string>
    <string name="muc_affiliation_changed">Affiliation changed to %1$s</string>
    <string name="muc_role_and_affiliation_changed">Role and affiliation changed to %1$s and %2$s</string>
    <string name="muc_occupant_role_changed">%1$s changed role to %2$s</string>
    <string name="muc_occupant_affiliation_changed">%1$s changed affiliation to %2$s</string>
    <string name="muc_occupant_role_and_affiliation_changed">%1$s changed role to %2$s and affiliation to %3$s</string>
    <string name="muc_occupant_kicked">%1$s has been kicked</string>
    <string name="muc_occupant_banned">%1$s has been banned</string>
    <string name="muc_occupant_joined">%1$s joined</string>
    <string name="muc_occupant_left">%1$s left</string>
    <string name="muc_occupant_changed_nick">%1$s is now known as %2$s</string>
    <string name="large_font_for_muc_status">Large font for status messages</string>
    <string name="large_font_for_muc_status_summary">Increase font size for role and affiliation change messages in conferences</string>
    <string name="show_join_leave">Show join/leave messages</string>
    <string name="show_join_leave_summary">Show status messages when occupants join or leave the conference</string>
    <string name="show_muc_topic">Show conference topic</string>
    <string name="show_muc_topic_summary">Show the room topic in a narrow strip at the top of the chat; tap it to open the conference details</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="crash_report_title">monocles mod has crashed</string>
    <string name="crash_report_message">By sending in stack traces you are helping the ongoing development of monocles mod\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
    <string name="send_now">Send now</string>
    <string name="mark_all_chats_as_read">Mark all chats as read</string>
    <string name="marked_as_read">Мarked as readе</string>
    <string name="marked_all_chats_as_read">All chats are marked as read</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to account</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your contact list. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Are you sure you want to delete all messages within this conversation?\n\n<b>Warning:</b> This will not delete copies of those messages that are stored on other devices or servers.</string>
    <string name="also_end_conversation">End this conversation afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Write message…</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_omemo_message">Write message…</string>
    <string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
    <string name="send_pgp_message">Write message…</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">%1$s utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart %1$s afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="contact_has_no_pgp_key">monocles mod is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
    <string name="no_pgp_keys">No OpenPGP Keys found</string>
    <string name="pref_general">General</string>
    <string name="pref_accept_files_wifi">Accept files in WiFi connections</string>
    <string name="pref_accept_files_summary_wifi">When connected to wifi automatically accept files smaller than…</string>
    <string name="pref_accept_files_mobile">Accept files in mobile connections</string>
    <string name="pref_accept_files_summary_mobile">When connected with mobile data automatically accept files smaller than…</string>
    <string name="pref_accept_files_mobileroaming">Accept files in mobile roaming connections</string>
    <string name="pref_accept_files_summary_mobileroaming">When connected with mobile data in roaming automatically accept files smaller than…</string>
    <string name="pref_attachments">Attachments</string>
    <string name="pref_notification_settings">Notification</string>
    <string name="pref_vibrate">Vibrate</string>
    <string name="pref_vibrate_summary">Vibrate when a new message arrives</string>
    <string name="pref_led">LED Notification</string>
    <string name="pref_led_summary">Blink notification light when a new message arrives</string>
    <string name="pref_sound">Ringtone</string>
    <string name="pref_sound_summary">Play sound when a new message arrives</string>
    <string name="pref_send_crash">Send crash reports</string>
    <string name="pref_send_crash_summary">By sending stack traces you are helping the ongoing development of monocles mod</string>
    <string name="vcard_tab_photo">Photo</string>
    <string name="vcard_full_name">Full name</string>
    <string name="vcard_nickname">Nickname</string>
    <string name="vcard_birthday">Birthday</string>
    <string name="vcard_birthday_hint">e.g. 24.12.1988</string>
    <string name="vcard_email">Email</string>
    <string name="vcard_phone">Phone</string>
    <string name="vcard_homepage">Website</string>
    <string name="vcard_title">Position</string>
    <string name="vcard_note">About</string>
    <string name="vcard_street">Street</string>
    <string name="vcard_ext">Apartment</string>
    <string name="vcard_city">City</string>
    <string name="vcard_region">Region</string>
    <string name="vcard_pcode">Postal code</string>
    <string name="vcard_country">Country</string>
    <string name="vcard_photo_change">Change photo</string>
    <string name="vcard_photo_remove">Remove photo</string>
    <string name="captcha_hint">Enter the text from the image above</string>
    <string name="muji_leave">Leave Muji conference</string>
    <string name="muji_conference">Group call</string>
    <string name="muji_conference_connecting">Preparing conference\u2026</string>
    <string name="muji_mic_off">Microphone off</string>
    <string name="muji_video_off">Camera off</string>
    <string name="muji_switch_camera">Switch camera</string>
</resources>