<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/vcard_photo_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="16dp">

                <eu.siacs.conversations.ui.widget.AvatarView
                    android:id="@+id/vcard_photo"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:background="?attr/color_background_secondary"
                    android:contentDescription="@string/vcard_tab_photo"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/vcard_photo_change"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vcard_photo_change" />

                    <Button
                        android:id="@+id/vcard_photo_remove"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vcard_photo_remove" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vcard_full_name"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="2"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_nickname"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_birthday"
                app:boxBackgroundColor="?attr/color_background_secondary"
                app:helperText="@string/vcard_birthday_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/vcard_email"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_phone"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_homepage"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_homepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>
