<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vcard_street"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="2"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_ext"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_ext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_city"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_region"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_pcode"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_pcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/vcard_country"
                app:boxBackgroundColor="?attr/color_background_secondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vcard_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:textColor="?attr/text_Color_Main" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</layout>
